--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -144,6 +144,16 @@
     position: relative;
   }
 
+  .card.highlight-card2 {
+    background-color: #d2b619;
+    color: white;
+    font-weight: 600;
+    border: none;
+    width: auto;
+    min-width: 20%;
+    position: relative;
+  }
+
   .card.card.highlight-card span {
     margin-left: 0px;
   }
@@ -355,7 +365,7 @@
   <p>Here are some links to help you get started:</p> -->
 
   <!-- <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutoria">
+    <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
       <span>Learn Angular</span>
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>    </a>
@@ -398,9 +408,9 @@
       <span>Type Error</span>
     </button>
 
-    <button class="card card-small" (click)="selection.value = 'material'" tabindex="0">
+    <button class="card card-small" (click)="testThrowError()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Angular Material</span>
+      <span>Throw Error</span>
     </button>
 
     <button class="card card-small" (click)="selection.value = 'pwa'" tabindex="0">
@@ -413,12 +423,12 @@
       <span>Add Dependency</span>
     </button>
 
-    <!-- <button class="card card-small" (click)="selection.value = 'test'" tabindex="0">
-      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
-      <span>Run and Watch Tests</span>
+    <button class="card highlight-card2 card-small" (click)="selection.value = 'test'" tabindex="0">
+      <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
+      <span>Submit</span>
     </button>
 
-    <button class="card card-small" (click)="selection.value = 'build'" tabindex="0">
+    <!-- <button class="card card-small" (click)="selection.value = 'build'" tabindex="0">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
       <span>Build for Production</span>
     </button> -->
