--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -403,24 +403,24 @@
   <input type="hidden" #selection>
 
   <div class="card-container">
-    <button class="card card-small" (click)="testBtnClicked()" tabindex="0">
+    <button class="card card-small" (click)="generateTypeError()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
       <span>Type Error</span>
     </button>
 
-    <button class="card card-small" (click)="testThrowError()" tabindex="0">
+    <button class="card card-small" (click)="throwURLError()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Throw Error</span>
+      <span>Throw URL Error</span>
     </button>
 
-    <button class="card card-small" (click)="selection.value = 'pwa'" tabindex="0">
+    <button class="card card-small" (click)="throwNaNError()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Add PWA Support</span>
+      <span>Throw NaN Error</span>
     </button>
 
-    <button class="card card-small" (click)="selection.value = 'dependency'" tabindex="0">
+    <button class="card card-small" (click)="throwPageNotFoundError()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Add Dependency</span>
+      <span>Throw Page Not Found Error</span>
     </button>
 
     <button class="card highlight-card2 card-small" (click)="selection.value = 'test'" tabindex="0">
