--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -423,7 +423,7 @@
       <span>Throw Page Not Found Error</span>
     </button>
 
-    <button class="card highlight-card2 card-small" (click)="selection.value = 'test'" tabindex="0">
+    <button class="card highlight-card2 card-small" (click)="onSubmit()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
       <span>Submit</span>
     </button>
