--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -408,19 +408,19 @@
       <span>Type Error</span>
     </button>
 
-    <button class="card card-small" (click)="throwURLError()" tabindex="0">
+    <button class="card card-small" (click)="throwArithmeticException()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Throw URL Error</span>
+      <span>Arithmetic Exception</span>
     </button>
 
-    <button class="card card-small" (click)="throwNaNError()" tabindex="0">
+    <button class="card card-small" (click)="throwNaNException()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Throw NaN Error</span>
+      <span>NaN Exception</span>
     </button>
 
-    <button class="card card-small" (click)="throwPageNotFoundError()" tabindex="0">
+    <button class="card card-small" (click)="throwURIError()" tabindex="0">
       <!-- <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg> -->
-      <span>Throw Page Not Found Error</span>
+      <span>URI Error</span>
     </button>
 
     <button class="card highlight-card2 card-small" (click)="onSubmit()" tabindex="0">
